# ClipSyncRS

./: .gitignore  Cargo.toml  ClipSync-Rust-WS-Brief.md  DEPLOY.md  README.md
client/: Cargo.toml  config.json.example
client/src/: clipboard.rs  config.rs  log.rs  main.rs  sync.rs  tray.rs  ws.rs
server/: Cargo.toml  clipsync-server.service  config.toml.example
server/src/: config.rs  main.rs  room.rs  wire.rs  ws.rs
