[package]
name = "clipsync"
version = "0.1.0"
edition = "2021"
description = "İki makine arasında WebSocket relay üzerinden pano senkronizasyonu"

[[bin]]
name = "clipsync"
path = "src/main.rs"

[dependencies]
# Çapraz platform
tokio             = { version = "1", features = ["rt", "macros", "io-util", "sync", "time", "net"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util      = { version = "0.3", default-features = false, features = ["std", "sink"] }
rustls            = "0.23"
url               = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
chrono            = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
anyhow            = "1"

# UI ve pano — şu an yalnızca Windows. Linux desteği için sonra
# [target.'cfg(target_os = "linux")'.dependencies] eklenecek (arboard + appindicator).
[target.'cfg(windows)'.dependencies]
tao           = "0.30"
tray-icon     = "0.19"
clipboard-win = "5"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }
