[package]
name = "clipsync-server"
version = "0.1.0"
edition = "2021"
description = "ClipSync WebSocket relay sunucusu"

[[bin]]
name = "clipsync-server"
path = "src/main.rs"

[dependencies]
axum               = { version = "0.7", features = ["ws"] }
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-tungstenite  = "0.24"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
chrono             = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap            = "6"
